crates/fsh-lint-core/src/cst/snapshots/fsh_lint_core__cst__formatter_insta_tests__tests__format_comprehensive_test.snap
---
source: crates/fsh-lint-core/src/cst/formatter_insta_tests.rs
expression: formatted
---
Profile: ProfileWithoutParent
Id: profile-no-parent
Title: "Profile Without Parent"
Description: "This profile has no parent declaration"

Profile: ProfileMissingFields
Parent: Patient

Profile: ProfileBadCardinality
Parent: Patient
Id: bad-cardinality
Title: "Bad Cardinality"

*  5..2

Profile: ProfileMissingBinding
Parent: Patient
Id: missing-binding
Title: "Missing Binding Strength"

*  from GenderValueSet

Profile: ProfileNoStatus
Parent: Patient
Id: no-status
Title: "No Status"
Description: "Missing status assignment"

Profile: GoodProfile
Parent: Patient
Id: good-profile
Title: "Good Profile"
Description: "Has all required fields"

*  = "draft"
*  0..1 MS

Profile: DuplicateTest
Parent: Patient
Id: dup-1
Title: "First"

Profile: DuplicateTest
Parent: Observation
Id: dup-2
Title: "Second Duplicate"

Extension: ExtensionNoContext
Id: ext-no-context
Title: "Extension Without Context"
Description: "Missing context specification"

Extension: GoodExtension
Id: good-extension
Title: "Good Extension"
Description: "Has context"

* 

ValueSet: ValueSet1
Id: duplicate-id
Title: "First ValueSet"

CodeSystem: CodeSystem1
Id: duplicate-id
Title: "CodeSystem with Duplicate ID"
