crates/fsh-lint-core/src/cst/snapshots/fsh_lint_core__cst__formatter_insta_tests__tests__format_patient_profile.snap
---
source: crates/fsh-lint-core/src/cst/formatter_insta_tests.rs
expression: formatted
---
Profile: USCorePatientProfile
Parent: Patient
Id: us-core-patient
Title: "US Core Patient Profile"
Description: "Defines constraints and extensions on the Patient resource for the minimal set of data to query and retrieve patient demographic information."

*  = "5.0.0"
*  = "active"
*  = ""
*  = "2022-04-20"
*  = "HL7 International - Cross-Group Projects"
*  = "url"
*  = "http://www.hl7.org/Special/committees/cgp"
