crates/fsh-lint-core/src/cst/snapshots/fsh_lint_core__cst__formatter_insta_tests__tests__format_simple_profile.snap
---
source: crates/fsh-lint-core/src/cst/formatter_insta_tests.rs
expression: formatted
---
Profile: MyPatient
Parent: Patient
Id: my-patient
Title: "My Patient Profile"

*  1..* MS
*  1..1 MS
*  1..1
