crates/fsh-lint-core/src/cst/snapshots/fsh_lint_core__cst__formatter_insta_tests__tests__format_valueset_binding.snap
---
source: crates/fsh-lint-core/src/cst/formatter_insta_tests.rs
expression: formatted
---
Profile: Test
Parent: Patient

*  from GenderValueSet (required)
*  from AllLanguages (extensible)
